--- a/project.html
+++ b/project.html
@@ -30,6 +30,41 @@
           </ul>
         </div>
       </nav>
+      <div class="container">
+        <div class ="row">
+          <div class="col-lg-3 col-sm-12">
+       </div>
+        <div class="card shadow-lg">
+          <div class="card-header">
+            design</div>
+            <div class="card-body">Image
+              <img src="" alt="image">
+            </div>
+            <div class="card-footer">
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, accusamus!</p>
+            </div>
+        </div>
+      </div>
+      <div class="container">
+        <div class ="row">
+          <div class="col-lg-3 col-sm-12">
+       </div>
+        <div class="card shadow-lg">
+          <div class="card-header">
+            design</div>
+            <div class="card-body">Image
+              <img src="" alt="image">
+            </div>
+            <div class="card-footer">
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, accusamus!</p>
+            </div>
+        </div>
+      </div>
+
+
+
+        </div>
+      </div>
       <footer class="footerpath" style="background-color: blanchedalmond;">
         <div class="container">
             <div class="row">
@@ -52,4 +87,14 @@
     </footer>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script>
 </body>
+<style>
+  *{
+    margin: 0;
+    padding: 20px;
+    font-family: 'Times New Roman', Times, serif;
+  }
+  .card{
+    width: 20rem;
+  }
+</style>
 </html>
